--- a/Dissertation.Service.IntegrationService/packages.config
+++ b/Dissertation.Service.IntegrationService/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="4.2.0" targetFramework="net46" />
   <package id="Common.Logging" version="3.4.1" targetFramework="net46" />
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="net46" />
   <package id="Common.Logging.NLog4411" version="3.4.1" targetFramework="net46" />
@@ -10,4 +11,5 @@
   <package id="MySql.Data" version="6.9.12" targetFramework="net46" />
   <package id="MySql.Data.Entity" version="6.9.12" targetFramework="net46" />
   <package id="NLog" version="4.4.11" targetFramework="net46" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net46" />
 </packages>
