--- a/Dissertation.Service.IntegrationService/Dissertation.Service.IntegrationService.csproj
+++ b/Dissertation.Service.IntegrationService/Dissertation.Service.IntegrationService.csproj
@@ -92,9 +92,12 @@
     <Compile Include="Classes\Config.cs" />
     <Compile Include="Classes\Executor.cs" />
     <Compile Include="Classes\Extensions.cs" />
+    <Compile Include="Classes\Helper.cs" />
     <Compile Include="Classes\Integration.cs" />
     <Compile Include="Classes\LogEntry.cs" />
-    <Compile Include="Classes\Prediction.cs" />
+    <Compile Include="Classes\Predictor.cs" />
+    <Compile Include="Factory.cs" />
+    <Compile Include="Interfaces\IPredictor.cs" />
     <Compile Include="Interfaces\IUpdater.cs" />
     <Compile Include="Interfaces\IIntegration.cs" />
     <Compile Include="MapperProfile.cs" />
@@ -113,6 +116,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseUpdater.cs" />
+    <Compile Include="Services\Executor.cs" />
     <Compile Include="Services\MeasurementUpdater.cs" />
     <Compile Include="Services\PostUpdater.cs" />
     <Compile Include="Services\SubstanceUpdater.cs" />
