--- a/Dissertation.Service.IntegrationService/App.config
+++ b/Dissertation.Service.IntegrationService/App.config
@@ -6,7 +6,9 @@
       <section name="logging" type="Common.Logging.ConfigurationSectionHandler, Common.Logging" />
     </sectionGroup>
     <section name="nlog" type="NLog.Config.ConfigSectionHandler, NLog" />
-  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+  </configSections>
+
   <common>
     <logging>
       <factoryAdapter type="Common.Logging.NLog.NLogLoggerFactoryAdapter, Common.Logging.NLog4411">
@@ -44,4 +46,7 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings configSource="connections.config"/>
+  <appSettings file="appsettings.config">
+    <add key="secret" value="321"/>
+  </appSettings>
 </configuration>
