--- a/.gitignore
+++ b/.gitignore
@@ -259,6 +259,10 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+#
 Dissertation.Web/connections.config
 Dissertation.Service.IntegrationService/connections.config
 Dissertation.Service.IntegrationApp/connections.config
+Dissertation.Service.IntegrationApp/
+Dissertation.Service.IntegrationService/appsettings.config
