--- a/Dissertation.Service.IntegrationService/Dissertation.Service.IntegrationService.csproj
+++ b/Dissertation.Service.IntegrationService/Dissertation.Service.IntegrationService.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{4FFFC8E7-E207-4929-8051-DB8AFDB49378}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Dissertation.Service.IntegrationService</RootNamespace>
     <AssemblyName>Dissertation.Service.IntegrationService</AssemblyName>
     <TargetFrameworkVersion>v4.6</TargetFrameworkVersion>
@@ -30,6 +30,9 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="AutoMapper, Version=4.2.0.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
@@ -96,6 +99,7 @@
     <Compile Include="Classes\Integration.cs" />
     <Compile Include="Classes\LogEntry.cs" />
     <Compile Include="Classes\Predictor.cs" />
+    <Compile Include="Classes\SqlCommands.cs" />
     <Compile Include="Factory.cs" />
     <Compile Include="Interfaces\IPredictor.cs" />
     <Compile Include="Interfaces\IUpdater.cs" />
@@ -116,6 +120,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\BaseUpdater.cs" />
+    <Compile Include="Services\ConsoleLog.cs" />
     <Compile Include="Services\Executor.cs" />
     <Compile Include="Services\MeasurementUpdater.cs" />
     <Compile Include="Services\PostUpdater.cs" />
@@ -128,8 +133,12 @@
     </None>
     <Content Include="connections.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <None Include="packages.config" />
+    <None Include="appsettings.config">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="ProjectInstaller.resx">
